--- a/estrutura.html
+++ b/estrutura.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/estrutura.css">
     <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
  
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
 
