--- a/galeria.html
+++ b/galeria.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/lightbox2/2.11.4/css/lightbox.min.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/css/galeriaDeFotos.css">
-    <link rel="stylesheet" href="assets/css/footer.css" />  
+    <link rel="stylesheet" href="assets/css/footer.css" /> 
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
     <title>Galeria de Fotos</title> 
 </head>
 
