--- a/ressignificar.html
+++ b/ressignificar.html
@@ -18,6 +18,7 @@
     <link rel="stylesheet" href="assets/css/ressignificar.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/footer.css">
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
     
 </head>
 
