--- a/resultaPesquisa.html
+++ b/resultaPesquisa.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="assets/css/menu.css">
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/resultadoPesquisa.css">
-    <link rel="stylesheet" href="assets/css/footer.css" />  
+    <link rel="stylesheet" href="assets/css/footer.css" /> 
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
     <title>Resultados da Pesquisa</title>
 </head>
 
