--- a/sem-categoria.html
+++ b/sem-categoria.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  
 <link rel="stylesheet" href="assets/css/menu.css">
 <link rel="stylesheet" href="assets/css/cardPrincilap.css">
+<link rel="icon" type="image/png" href="./assets/images/icon.png">
     <title>Sem Categoria</title>
 </head>
 <body>
