--- a/video.html
+++ b/video.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/video.css">
     <link rel="stylesheet" href="assets/css/footer.css" />  
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
     <title>Vídeos</title>
 </head>
 
