--- a/cursos.html
+++ b/cursos.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/cursos.css">    
     <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
 
     <title>Cursos</title>
 </head>
