--- a/especialidade.html
+++ b/especialidade.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/footer.css" />
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/especialidade.css">
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
 </head>
 
 <body>
