--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
   <link rel="stylesheet" href="assets/css/home.css" />
   <link rel="stylesheet" href="assets/css/responsive.css" />
   <link rel="stylesheet" href="/assets/css/index.css" />
+<link rel="icon" type="image/png" href="./assets/images/icon.png">
 </head>
 
 <body>
@@ -55,7 +56,7 @@
           ao indivíduo o autoconhecimento, autocuidado e autonomia, ampliando
           a consciência para uma forma de ser no mundo mais autêntica.
         </p>
-        <a href="sobre.html" class="btn">
+        <a href="ressignificar.html" class="btn">
           Saiba mais
           <img class="btn-icon" src="assets/images/simbolo-de-setas-duplas-para-a-direita-para-avancar.png" alt="Ícone de seta" />
         </a>
