--- a/palestra.html
+++ b/palestra.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/palestra.css">
     <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
     <title>Palestras</title>    
 </head>
 
