--- a/psicoterapia-grupal.html
+++ b/psicoterapia-grupal.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/psicoterapia-grupal.css">
     <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
     <title>Psicoterapia Grupal</title>
 </head>
 <body>
