--- a/psicoterapia-individual.html
+++ b/psicoterapia-individual.html
@@ -7,7 +7,9 @@
     <link rel="stylesheet" href="assets/css/cardPrincilap.css">
     <link rel="stylesheet" href="assets/css/psicoterapiaIndividual.css">
     <link rel="stylesheet" href="assets/css/footer.css" />
+    <link rel="icon" type="image/png" href="./assets/images/icon.png">
     <title>Psicoterapia Individual</title>
+    
 </head>
 <body>
         <div id="menu"></div>
